2003-07-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h (S_ISGID): Please, somebody teach me to count!

2003-07-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h :S_I[RWX]{USR|GRP|OTH} etc changed so they
	don't overlap with S_ISLINK and S_ISSOCK. Reported by Scott
	Wilkinson.

2003-06-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h: S_IFFIFO defies logic and should be called
	S_IFIFO!

2003-05-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h (S_IF*): Added macros to test the type of a
	file.

2003-05-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h: Added various S_IF macros for the st_mode
	flags.

2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/mqueue.h: Define POSIX 1003.1d draft mq_timedsend() and
	mq_timedreceive() functions.

2002-12-12  Bart Veer  <bartv@ecoscentric.com>

	* include/stdlib.h: #include cyg_type.h, now that this header
	uses NORET attributes

2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* include/sys/types.h: Add define/undefine for __NEED_FD_SETS_ONLY
	around include of sys/select.h to avoid circular dependencies in
	headers.

	* include/sys/select.h: Reorganized definitions so that the
	include from sys/types.h only defines the fd_set type and macros
	and not the select() and pselect() functions. The latter needs
	sigset_t from signal.h, which can result in circularity.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* include/stdlib.h: use NORET attributes from cyg_type.h.

2002-03-20  Jonathan Larmour  <jlarmour@redhat.com>

	* include/float.h: Don't have multiple inclusion protection. It is
	unnecessary and can confuse things if the headers are subject to two
	-I paths.
	* include/stdarg.h: Ditto.
	* include/float.h: Don't cover include_next with inclusion protection
	for a similar reason.
	* include/stddef.h: Use C comment.

2002-01-17  Jonathan Larmour  <jlarmour@redhat.com>
